Add environment variable management

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,14 @@
 version: "2"
 
 services:
-  kafka-to-hbase:
+  app:
     build: ./
     image: kafka-to-hbase:latest
     command: "true"
+    environment:
+      K2HB_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      K2HB_KAFKA_GROUP_ID: kafka-to-hbase-dev
+      K2HB_KAFKA_SSL: "false"
 
   kafka:
     image: harisekhon/kafka
