Specify user directory for install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run: sudo apt-get install -y build-essential python3-dev
       - run: python setup.py bdist_wheel
-      - run: pip install dist/kafka_to_hbase-1.0-py3-none-any.whl[dev]
+      - run: pip install --user dist/kafka_to_hbase-1.0-py3-none-any.whl[dev]
       - run: nosetests
 workflows:
   version: 2
