--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,21 +68,57 @@ jobs:
           path: test-results
           destination: test-results
 
-  snyk:
+  snyk-pr:
     docker:
       - image: circleci/openjdk:8-jdk
+    environment:
+      IMAGE_NAME: kafka-to-hbase
     steps:
       - checkout
-      - snyk/scan:
-          organization: dwp-dataworks
-          fail-on-issues: false
-          target-file: build.gradle.kts
-          project: '${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-all'
+      # First snyk scan only looks for sev:high and will fail if found
       - snyk/scan:
           organization: dwp-dataworks
           severity-threshold: high
           target-file: build.gradle.kts
-          project: '${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-high-only'
+          project: '${CIRCLE_PROJECT_REPONAME}/pr-kotlin'
+      - setup_remote_docker
+      - run:
+          command: 'docker build -t $IMAGE_NAME:latest .'
+          name: Build Docker image
+      # Second snyk scan examines Docker container for sev:high and will fail if found
+      - snyk/scan:
+          organization: dwp-dataworks
+          docker-image-name: '$IMAGE_NAME:latest'
+          severity-threshold: high
+          target-file: Dockerfile
+          monitor-on-build: false
+          project: '${CIRCLE_PROJECT_REPONAME}/pr-docker'
+
+  snyk-master:
+    docker:
+      - image: circleci/openjdk:8-jdk
+    environment:
+      IMAGE_NAME: kafka-to-hbase
+    steps:
+      - checkout
+      # First snyk scan only looks for sev:high and will fail if found
+      - snyk/scan:
+          organization: dwp-dataworks
+          severity-threshold: high
+          target-file: build.gradle.kts
+          project: '${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-kotlin'
+      - setup_remote_docker
+      - run:
+          command: 'docker build -t $IMAGE_NAME:latest .'
+          name: Build Docker image
+      # Second snyk scan examines Docker container for sev:high and will fail if found
+      - snyk/scan:
+          organization: dwp-dataworks
+          docker-image-name: '$IMAGE_NAME:latest'
+          severity-threshold: high
+          target-file: Dockerfile
+          project: '${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-docker'
+
 
   publish-github-release:
     docker:
@@ -153,9 +189,18 @@ workflows:
       - test:
           requires:
             - build
-      - snyk:
+      - snyk-pr:
           requires:
             - build
+          filters:
+            branches:
+              ignore: master
+      - snyk-master:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
       - publish-github-release:
           requires:
             - test
