Skip polling kafka after cancelling coroutine (#83)
* Skip polling kafka after cancelling coroutine

* Remove unnecessary test

* Only catch IOException in shovel

* Add kafka2s3 dependency to integration-test docker-compose service

* Fix typo

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -88,6 +88,7 @@ services:
       context: ./
     depends_on:
       - kafka2hbase
+      - kafka2s3
     command: "true"
     environment:
       USER_NAME: "user"
