--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,19 +57,23 @@ jobs:
           name: "Run the integration test"
           command: |
             sudo pip3 install docker-compose
+            docker-compose -f docker-compose.yaml down
             docker build --tag dwp-java:latest --file ./docker/java/Dockerfile .
             docker build --tag dwp-python-preinstall:latest --file ./docker/python/Dockerfile .
             docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
-            docker-compose -f docker-compose.yaml up --build -d zookeeper kafka hbase aws-s3 metadatastore kafka2s3
+            docker-compose -f docker-compose.yaml build zookeeper kafka hbase aws-s3 metadatastore kafka2s3 s3-provision integration-test
+            docker-compose -f docker-compose.yaml up -d zookeeper kafka hbase aws-s3 metadatastore kafka2s3
             S3_READY_REGEX=^Ready\.$
             while ! docker logs aws-s3 2> /dev/null | grep -q $S3_READY_REGEX; do
                 echo Waiting for aws-s3.
                 sleep 2
             done
-            docker-compose -f docker-compose.yaml up --build kafka2hbase
-            docker-compose -f docker-compose.yaml up --build s3-provision
+            docker-compose -f docker-compose.yaml up -d s3-provision
+            docker-compose -f docker-compose.yaml build kafka2hbase
+            docker-compose -f docker-compose.yaml up -d kafka2hbase
+            docker-compose -f docker-compose.yaml rm integration-test
             docker-compose -f docker-compose.yaml run --name integration-test integration-test gradle --no-daemon :integration -x test
-            docker cp integration-test:/kafka2hbase/build/test-results .
+            docker cp integration-test:/home/gradle/build/test-results .
       - store_test_results:
           path: test-results
       - store_artifacts:
@@ -91,7 +95,9 @@ jobs:
           project: '${CIRCLE_PROJECT_REPONAME}/pr-kotlin'
       - setup_remote_docker
       - run:
-          command: 'docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile . && docker build -t $IMAGE_NAME:latest .'
+          command: |
+            docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
+            docker build -t $IMAGE_NAME:latest .
           name: Build Docker image
       # Second snyk scan examines Docker container for sev:high and will fail if found
       - snyk/scan:
@@ -117,7 +123,9 @@ jobs:
           project: '${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-kotlin'
       - setup_remote_docker
       - run:
-          command: 'docker build -t $IMAGE_NAME:latest .'
+          command: |
+            docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
+            docker build -t $IMAGE_NAME:latest .
           name: Build Docker image
       # Second snyk scan examines Docker container for sev:high and will fail if found
       - snyk/scan:
@@ -154,6 +162,7 @@ jobs:
       - run:
           name: Build Docker image
           command: |
+            docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
             docker build -t $IMAGE_NAME:latest .
       - run:
           name: Archive Docker image
