--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - restore_cache:
           key: kafka-to-hbase-{{ checksum "build.gradle.kts" }}
 
-      - run: gradle :unit build -x test
+      - run: ./gradlew :unit build -x test
 
       - save_cache:
           key: kafka-to-hbase-{{ checksum "build.gradle.kts" }}
@@ -27,7 +27,7 @@ jobs:
             - .gradle
 
       - run: |
-          gradle distTar
+          ./gradlew distTar
           gzip -9 build/distributions/*.tar
 
       - store_artifacts:
@@ -57,23 +57,17 @@ jobs:
           name: "Run the integration test"
           command: |
             sudo pip3 install docker-compose
-            docker-compose -f docker-compose.yaml down
             docker build --tag dwp-java:latest --file ./docker/java/Dockerfile .
             docker build --tag dwp-python-preinstall:latest --file ./docker/python/Dockerfile .
-            docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
-            docker-compose -f docker-compose.yaml build zookeeper kafka hbase aws-s3 metadatastore kafka2s3 s3-provision integration-test
-            docker-compose -f docker-compose.yaml up -d zookeeper kafka hbase aws-s3 metadatastore kafka2s3
+            docker-compose -f docker-compose.yaml up --build -d zookeeper kafka hbase kafka2hbase kafka2s3 aws-s3 integration-test
             S3_READY_REGEX=^Ready\.$
             while ! docker logs aws-s3 2> /dev/null | grep -q $S3_READY_REGEX; do
                 echo Waiting for aws-s3.
                 sleep 2
             done
-            docker-compose -f docker-compose.yaml up -d s3-provision
-            docker-compose -f docker-compose.yaml build kafka2hbase
-            docker-compose -f docker-compose.yaml up -d kafka2hbase
-            docker-compose -f docker-compose.yaml rm integration-test
-            docker-compose -f docker-compose.yaml run --name integration-test integration-test gradle --no-daemon :integration -x test
-            docker cp integration-test:/home/gradle/build/test-results .
+            docker-compose -f docker-compose.yaml up --build s3-provision
+            docker-compose -f docker-compose.yaml run --name integration-test integration-test ./gradlew --no-daemon :integration -x test
+            docker cp integration-test:/kafka2hbase/build/test-results .
       - store_test_results:
           path: test-results
       - store_artifacts:
@@ -95,9 +89,7 @@ jobs:
           project: '${CIRCLE_PROJECT_REPONAME}/pr-kotlin'
       - setup_remote_docker
       - run:
-          command: |
-            docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
-            docker build -t $IMAGE_NAME:latest .
+          command: 'docker build -t $IMAGE_NAME:latest .'
           name: Build Docker image
       # Second snyk scan examines Docker container for sev:high and will fail if found
       - snyk/scan:
@@ -123,9 +115,7 @@ jobs:
           project: '${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-kotlin'
       - setup_remote_docker
       - run:
-          command: |
-            docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
-            docker build -t $IMAGE_NAME:latest .
+          command: 'docker build -t $IMAGE_NAME:latest .'
           name: Build Docker image
       # Second snyk scan examines Docker container for sev:high and will fail if found
       - snyk/scan:
@@ -162,7 +152,6 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
             docker build -t $IMAGE_NAME:latest .
       - run:
           name: Archive Docker image
