--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,13 +78,25 @@ jobs:
             docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
             VERSION=$(grep '^version' gradle.properties | cut -f2 -d'=')
             docker-compose -f docker-compose.yaml build --build-arg VERSION=$VERSION zookeeper kafka hbase aws-s3 metadatastore kafka2s3 s3-provision integration-test
-            docker-compose -f docker-compose.yaml up -d zookeeper kafka hbase aws-s3 metadatastore kafka2s3
+            docker-compose -f docker-compose.yaml up -d zookeeper kafka hbase aws-s3 metadatastore
             S3_READY_REGEX=^Ready\.$
             while ! docker logs aws-s3 2> /dev/null | grep -q $S3_READY_REGEX; do
                 echo Waiting for aws-s3.
                 sleep 2
             done
-            docker-compose -f docker-compose.yaml up -d s3-provision
+
+            docker-compose -f docker-compose.yaml up s3-provision
+
+            while ! docker logs metadatastore 2>&1 | grep "^Version"; do
+               echo Waiting for metadatastore.
+               sleep 2
+            done
+            sleep 5
+
+            docker exec -i metadatastore mysql --host=127.0.0.1 --user=root --password=password metadatastore  < ./docker/metadatastore/create_table.sql
+            docker exec -i metadatastore mysql --host=127.0.0.1 --user=root --password=password metadatastore  < ./docker/metadatastore/grant_user.sql
+
+            docker-compose -f docker-compose.yaml up -d kafka2s3
             docker-compose -f docker-compose.yaml build kafka2hbase
             docker-compose -f docker-compose.yaml up -d kafka2hbase
             docker-compose -f docker-compose.yaml rm integration-test
