--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,34 +42,36 @@ services:
       - hbase
       - metadatastore
     environment:
-      JAVA_OPTS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
-      K2HB_ENVIRONMENT: "local-dev"
-      K2HB_APPLICATION_NAME: "kafka2hbase"
-      K2HB_APP_VERSION: "test"
+      AWS_ACCESS_KEY_ID: "aws-access-key"
+      AWS_SECRET_ACCESS_KEY: "aws-secret-access-key"
+      DUMMY_SECRET_METASTORE_PASSWORD: "password"
       INSTANCE_ID: "localhost"
-      K2HB_KAFKA_INSECURE: "true"
-      K2HB_KAFKA_TOPIC_REGEX: "^db.(.*)"
-      K2HB_KAFKA_META_REFRESH_MS: "1000"
-      K2HB_KAFKA_POLL_TIMEOUT: "PT10S"
-      K2HB_RETRY_MAX_ATTEMPTS: "3"
-      K2HB_RETRY_INITIAL_BACKOFF: "1"
-      K2HB_RETRY_BACKOFF_MULTIPLIER: "1"
-      K2HB_KAFKA_MAX_POLL_RECORDS: "10"
-      K2HB_HBASE_RPC_TIMEOUT_MILLISECONDS: "1200"
+      JAVA_OPTS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
+      K2HB_APP_VERSION: "test"
+      K2HB_APPLICATION_NAME: "kafka2hbase"
+      K2HB_AWS_S3_BATCH_PUTS: "true"
+      K2HB_AWS_S3_USE_LOCALSTACK: "true"
+      K2HB_ENVIRONMENT: "local-dev"
       K2HB_HBASE_OPERATION_TIMEOUT_MILLISECONDS": "1800"
       K2HB_HBASE_PAUSE_MILLISECONDS: "50"
       K2HB_HBASE_RETRIES": "3"
+      K2HB_HBASE_RPC_TIMEOUT_MILLISECONDS: "1200"
+      K2HB_IMAGE_DIGEST: "latest"
       K2HB_KAFKA_DLQ_TOPIC: "test-dlq-topic"
-      K2HB_RDS_USERNAME: "k2hbwriter"
-      K2HB_RDS_PASSWORD_SECRET_NAME: "metastore_password"
+      K2HB_KAFKA_INSECURE: "true"
+      K2HB_KAFKA_MAX_POLL_RECORDS: "10"
+      K2HB_KAFKA_META_REFRESH_MS: "1000"
+      K2HB_KAFKA_POLL_TIMEOUT: "PT10S"
+      K2HB_KAFKA_TOPIC_REGEX: "^db.(.*)"
       K2HB_RDS_DATABASE_NAME: "metadatastore"
       K2HB_RDS_ENDPOINT: "metadatastore"
+      K2HB_RDS_PASSWORD_SECRET_NAME: "password"
       K2HB_RDS_PORT: "3306"
+      K2HB_RDS_USERNAME: "k2hbwriter"
+      K2HB_RETRY_BACKOFF_MULTIPLIER: "1"
+      K2HB_RETRY_INITIAL_BACKOFF: "1"
+      K2HB_RETRY_MAX_ATTEMPTS: "3"
       K2HB_USE_AWS_SECRETS: "false"
-      DUMMY_SECRET_METASTORE_PASSWORD: "password"
-      AWS_ACCESS_KEY_ID: "aws-access-key"
-      AWS_SECRET_ACCESS_KEY: "aws-secret-access-key"
-      K2HB_IMAGE_DIGEST: "latest"
       K2HB_WRITE_TO_METADATA_STORE: "true"
 
   kafka2hbaseequality:
@@ -83,36 +85,37 @@ services:
       - hbase
       - metadatastore
     environment:
-      JAVA_OPTS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
-      K2HB_ENVIRONMENT: "local-dev"
-      K2HB_APPLICATION_NAME: "kafka2hbase"
-      K2HB_APP_VERSION: "test"
+      AWS_ACCESS_KEY_ID: "aws-access-key"
+      AWS_SECRET_ACCESS_KEY: "aws-secret-access-key"
+      DUMMY_SECRET_METASTORE_PASSWORD: "password"
       INSTANCE_ID: "localhost"
-      K2HB_KAFKA_INSECURE: "true"
-      K2HB_KAFKA_META_REFRESH_MS: "1000"
-      K2HB_KAFKA_POLL_TIMEOUT: "PT10S"
-      K2HB_RETRY_MAX_ATTEMPTS: "3"
-      K2HB_RETRY_INITIAL_BACKOFF: "1"
-      K2HB_RETRY_BACKOFF_MULTIPLIER: "1"
-      K2HB_KAFKA_MAX_POLL_RECORDS: "10"
-      K2HB_HBASE_RPC_TIMEOUT_MILLISECONDS: "1200"
+      JAVA_OPTS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
+      K2HB_APP_VERSION: "test"
+      K2HB_APPLICATION_NAME: "kafka2hbase"
+      K2HB_AWS_S3_USE_LOCALSTACK: "true"
+      K2HB_ENVIRONMENT: "local-dev"
       K2HB_HBASE_OPERATION_TIMEOUT_MILLISECONDS": "1800"
       K2HB_HBASE_PAUSE_MILLISECONDS: "50"
       K2HB_HBASE_RETRIES": "3"
+      K2HB_HBASE_RPC_TIMEOUT_MILLISECONDS: "1200"
+      K2HB_IMAGE_DIGEST: "latest"
       K2HB_KAFKA_DLQ_TOPIC: "test-dlq-topic"
-      K2HB_RDS_USERNAME: "k2hbwriter"
-      K2HB_RDS_PASSWORD_SECRET_NAME: "metastore_password"
+      K2HB_KAFKA_INSECURE: "true"
+      K2HB_KAFKA_MAX_POLL_RECORDS: "10"
+      K2HB_KAFKA_META_REFRESH_MS: "1000"
+      K2HB_KAFKA_POLL_TIMEOUT: "PT10S"
+      K2HB_KAFKA_TOPIC_REGEX: "^data.(.*)"
+      K2HB_QUALIFIED_TABLE_PATTERN: ([-\w]+)\.([-\w]+)
       K2HB_RDS_DATABASE_NAME: "metadatastore"
       K2HB_RDS_ENDPOINT: "metadatastore"
+      K2HB_RDS_PASSWORD_SECRET_NAME: "password"
       K2HB_RDS_PORT: "3306"
+      K2HB_RDS_USERNAME: "k2hbwriter"
+      K2HB_RETRY_BACKOFF_MULTIPLIER: "1"
+      K2HB_RETRY_INITIAL_BACKOFF: "1"
+      K2HB_RETRY_MAX_ATTEMPTS: "3"
       K2HB_USE_AWS_SECRETS: "false"
-      DUMMY_SECRET_METASTORE_PASSWORD: "password"
-      AWS_ACCESS_KEY_ID: "aws-access-key"
-      AWS_SECRET_ACCESS_KEY: "aws-secret-access-key"
-      K2HB_IMAGE_DIGEST: "latest"
       K2HB_VALIDATOR_SCHEMA: "equality_message.schema.json"
-      K2HB_QUALIFIED_TABLE_PATTERN: ([-\w]+)\.([-\w]+)
-      K2HB_KAFKA_TOPIC_REGEX: "^data.(.*)"
 
   kafka2s3:
     image: dwpdigital/kafka-to-s3:latest
@@ -139,8 +142,6 @@ services:
     container_name: aws-s3
     environment:
       - SERVICES=s3
-      - DEBUG=1
-      - DATA_DIR=/opt/s3/data
 
   s3-provision:
     image: s3-bucket-provision
@@ -148,13 +149,6 @@ services:
     container_name: s3-provision
     depends_on:
       - aws-s3
-    environment:
-      - S3_SERVICE_ENDPOINT=http://aws-s3:4572
-      - AWS_REGION=eu-west-2
-      - AWS_DEFAULT_REGION=eu-west-2
-      - AWS_ACCESS_KEY_ID=aws-access-key
-      - AWS_SECRET_ACCESS_KEY=aws-secret-access-key
-      - S3_BUCKET=kafka2s3
 
   metadatastore:
     image: mysql:5.7
@@ -179,25 +173,26 @@ services:
       - kafka2s3
     command: "true"
     environment:
-      K2HB_ENVIRONMENT: "local-dev"
-      K2HB_APPLICATION_NAME: "k2hb-integration-test"
-      K2HB_APP_VERSION: "test"
-      INSTANCE_ID: "localhost"
-      USER_NAME: "user"
+      AWS_ACCESS_KEY_ID: "aws-access-key"
+      AWS_SECRET_ACCESS_KEY: "aws-secret-access-key"
+      DUMMY_SECRET_METASTORE_PASSWORD: "password"
       GROUP_NAME: "usergroup"
+      INSTANCE_ID: "localhost"
+      K2HB_APP_VERSION: "test"
+      K2HB_APPLICATION_NAME: "k2hb-integration-test"
+      K2HB_AWS_S3_USE_LOCALSTACK: "true"
+      K2HB_ENVIRONMENT: "local-dev"
+      K2HB_KAFKA_DLQ_TOPIC: "test-dlq-topic"
       K2HB_KAFKA_INSECURE: "true"
       K2HB_KAFKA_META_REFRESH_MS: "1000"
       K2HB_KAFKA_POLL_TIMEOUT: "PT10S"
-      K2HB_RETRY_MAX_ATTEMPTS: "3"
-      K2HB_RETRY_INITIAL_BACKOFF: "1"
-      K2HB_RETRY_BACKOFF_MULTIPLIER: "1"
-      K2HB_KAFKA_DLQ_TOPIC: "test-dlq-topic"
-      K2HB_RDS_USERNAME: "dummy_user"
-      K2HB_RDS_PASSWORD_SECRET_NAME: "metastore_password"
-      K2HB_RDS_DATABASE_NAME: "dummy_database"
+      K2HB_RDS_DATABASE_NAME: "metadatastore"
       K2HB_RDS_ENDPOINT: "metadatastore"
+      K2HB_RDS_PASSWORD_SECRET_NAME: "password"
       K2HB_RDS_PORT: "3306"
+      K2HB_RDS_USERNAME: "k2hbwriter"
+      K2HB_RETRY_BACKOFF_MULTIPLIER: "1"
+      K2HB_RETRY_INITIAL_BACKOFF: "1"
+      K2HB_RETRY_MAX_ATTEMPTS: "3"
       K2HB_USE_AWS_SECRETS: "false"
-      DUMMY_SECRET_METASTORE_PASSWORD: "user_password"
-      AWS_ACCESS_KEY_ID: "aws-access-key"
-      AWS_SECRET_ACCESS_KEY: "aws-secret-access-key"
+      USER_NAME: "user"
