--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,6 +74,7 @@ services:
       K2HB_WRITE_TO_METADATA_STORE: "true"
       K2HB_KAFKA_TOPIC_REGEX: (db[.]{1}[-\w]+[.]{1}[-.\w]+)
       K2HB_QUALIFIED_TABLE_PATTERN: \w+\.([-\w]+)\.([-.\w]+)
+      K2HB_AWS_S3_MANIFEST_DIRECTORY: "manifest_prefix"
 
   kafka2hbaseequality:
     image: kafka2hbase:latest
@@ -117,6 +118,7 @@ services:
       K2HB_VALIDATOR_SCHEMA: "equality_message.schema.json"
       K2HB_KAFKA_TOPIC_REGEX: (data[.][-\w]+)
       K2HB_QUALIFIED_TABLE_PATTERN: ([-\w]+)\.([-\w]+)
+      K2HB_AWS_S3_WRITE_MANIFESTS: "false"
 
   kafka2s3:
     image: dwpdigital/kafka-to-s3:latest
