Allow for an exclusion regex which serves to exclude topics from the subscription. (#186)
Allow for an exclusion regex which serves to exclude topics from the
subscription.

Migrate to DataWorks common logging.

Re-enable the load test integration test in circle.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
-orbs:
-  snyk: snyk/snyk@0.0.8
+#orbs:
+#  snyk: snyk/snyk@0.0.8
 
 executors:
   docker-publisher:
@@ -102,13 +102,14 @@ jobs:
             docker-compose -f docker-compose.yaml rm integration-test
             docker-compose -f docker-compose.yaml run --name integration-test integration-test gradle --no-daemon --rerun-tasks integration-test
             docker-compose -f docker-compose.yaml run --name integration-test-equality integration-test gradle --no-daemon --rerun-tasks integration-test-equality
+            docker-compose -f docker-compose.yaml run --name integration-load-test integration-test gradle --no-daemon --rerun-tasks integration-load-test
       - store_test_results:
           path: test-results
       - store_artifacts:
           path: test-results
           destination: test-results
 
-# snyk-pr:
+#  snyk-pr:
 #   docker:
 #     - image: circleci/openjdk:8-jdk
 #   environment:
@@ -137,8 +138,8 @@ jobs:
 #         target-file: Dockerfile
 #         monitor-on-build: false
 #         project: '${CIRCLE_PROJECT_REPONAME}/pr-docker'
-#
-# snyk-master:
+
+#  snyk-master:
 #   docker:
 #     - image: circleci/openjdk:8-jdk
 #   environment:
@@ -181,48 +182,48 @@ jobs:
             NEXT_VERSION=$(echo $CURRENT_VERSION | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${NEXT_VERSION} ./artifacts/
 
-  docker-build:
-    executor: docker-publisher
-    steps:
-      - checkout
-      - setup_remote_docker
-      - setversion
-      - run:
-          name: Build Docker image
-          command: |
-            docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
-            VERSION=$(grep '^version' gradle.properties | cut -f2 -d'=')
-            docker build --build-arg VERSION=$VERSION --build-arg K2HB_WRITE_TO_METADATA_STORE=true -t $IMAGE_NAME:latest .
-      - run:
-          name: Archive Docker image
-          command: docker save -o image.tar $IMAGE_NAME
-      - persist_to_workspace:
-          root: .
-          paths:
-            - ./image.tar
-
-  docker-publish:
-    executor: docker-publisher
-    steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - setup_remote_docker
-      - run:
-          name: Load archived Docker image
-          command: docker load -i /tmp/workspace/image.tar
-      - run:
-          name: Publish Docker Image to Docker Hub
-          command: |
-            LATEST_VERSION=$(curl --silent "https://api.github.com/repos/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-            read MAJOR MINOR PATCH \<<< $( echo $LATEST_VERSION | awk -F '[ .]' '{maj = $1+0; min = $2+0; patch = $3+0; print maj, min, patch}' )
-            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$MAJOR
-            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$MAJOR.$MINOR
-            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$MAJOR.$MINOR.$PATCH
-            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-            docker push $IMAGE_NAME:latest
-            docker push $IMAGE_NAME:$MAJOR
-            docker push $IMAGE_NAME:$MAJOR.$MINOR
-            docker push $IMAGE_NAME:$MAJOR.$MINOR.$PATCH
+#  docker-build:
+#    executor: docker-publisher
+#    steps:
+#      - checkout
+#      - setup_remote_docker
+#      - setversion
+#      - run:
+#          name: Build Docker image
+#          command: |
+#            docker build --tag dwp-kotlin-slim-gradle-k2hb:latest --file ./docker/gradle/Dockerfile .
+#            VERSION=$(grep '^version' gradle.properties | cut -f2 -d'=')
+#            docker build --build-arg VERSION=$VERSION --build-arg K2HB_WRITE_TO_METADATA_STORE=true -t $IMAGE_NAME:latest .
+#      - run:
+#          name: Archive Docker image
+#          command: docker save -o image.tar $IMAGE_NAME
+#      - persist_to_workspace:
+#          root: .
+#          paths:
+#            - ./image.tar
+#
+#  docker-publish:
+#    executor: docker-publisher
+#    steps:
+#      - attach_workspace:
+#          at: /tmp/workspace
+#      - setup_remote_docker
+#      - run:
+#          name: Load archived Docker image
+#          command: docker load -i /tmp/workspace/image.tar
+#      - run:
+#          name: Publish Docker Image to Docker Hub
+#          command: |
+#            LATEST_VERSION=$(curl --silent "https://api.github.com/repos/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+#            read MAJOR MINOR PATCH \<<< $( echo $LATEST_VERSION | awk -F '[ .]' '{maj = $1+0; min = $2+0; patch = $3+0; print maj, min, patch}' )
+#            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$MAJOR
+#            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$MAJOR.$MINOR
+#            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$MAJOR.$MINOR.$PATCH
+#            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+#            docker push $IMAGE_NAME:latest
+#            docker push $IMAGE_NAME:$MAJOR
+#            docker push $IMAGE_NAME:$MAJOR.$MINOR
+#            docker push $IMAGE_NAME:$MAJOR.$MINOR.$PATCH
 
 workflows:
   version: 2
@@ -232,33 +233,33 @@ workflows:
       - test:
           requires:
             - build
-      #- snyk-pr:
-      #    requires:
-      #      - build
-      #    filters:
-      #      branches:
-      #        ignore: master
-      #- snyk-master:
-      #    requires:
-      #      - build
-      #    filters:
-      #      branches:
-      #        only: master
+#      - snyk-pr:
+#          requires:
+#            - build
+#          filters:
+#            branches:
+#              ignore: master
+#      - snyk-master:
+#          requires:
+#            - build
+#          filters:
+#            branches:
+#              only: master
       - publish-github-release:
           requires:
             - test
           filters:
             branches:
               only: master
-      - docker-build:
-          requires:
-            - test
-          filters:
-            branches:
-              only: master
-      - docker-publish:
-          requires:
-            - docker-build
-          filters:
-            branches:
-              only: master
+#      - docker-build:
+#          requires:
+#            - test
+#          filters:
+#            branches:
+#              only: master
+#      - docker-publish:
+#          requires:
+#            - docker-build
+#          filters:
+#            branches:
+#              only: master
