--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,16 +47,18 @@ services:
       - hbase
       - metadatastore
     environment:
+      APP_VERSION: "test"
+      APPLICATION: "k2hb-main"
+      ENVIRONMENT: "local-dev"
+      COMPONENT: "jar-file"
+      LOG_LEVEL: "DEBUG"
       AWS_ACCESS_KEY_ID: "aws-access-key"
       AWS_SECRET_ACCESS_KEY: "aws-secret-access-key"
       DUMMY_SECRET_METASTORE_PASSWORD: "password"
       INSTANCE_ID: "localhost"
       JAVA_OPTS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
-      K2HB_APP_VERSION: "test"
-      K2HB_APPLICATION_NAME: "kafka2hbase"
       K2HB_AWS_S3_BATCH_PUTS: "true"
       K2HB_AWS_S3_USE_LOCALSTACK: "true"
-      K2HB_ENVIRONMENT: "local-dev"
       K2HB_HBASE_OPERATION_TIMEOUT_MILLISECONDS": "1800"
       K2HB_HBASE_PAUSE_MILLISECONDS: "50"
       K2HB_HBASE_RETRIES": "3"
@@ -94,15 +96,17 @@ services:
       - hbase
       - metadatastore
     environment:
+      APP_VERSION: "test"
+      APPLICATION: "k2hb-equality"
+      ENVIRONMENT: "local-dev"
+      COMPONENT: "jar-file"
+      LOG_LEVEL: "DEBUG"
       AWS_ACCESS_KEY_ID: "aws-access-key"
       AWS_SECRET_ACCESS_KEY: "aws-secret-access-key"
       DUMMY_SECRET_METASTORE_PASSWORD: "password"
       INSTANCE_ID: "localhost"
       JAVA_OPTS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
-      K2HB_APP_VERSION: "test"
-      K2HB_APPLICATION_NAME: "kafka2hbase"
       K2HB_AWS_S3_USE_LOCALSTACK: "true"
-      K2HB_ENVIRONMENT: "local-dev"
       K2HB_HBASE_OPERATION_TIMEOUT_MILLISECONDS": "1800"
       K2HB_HBASE_PAUSE_MILLISECONDS: "50"
       K2HB_HBASE_RETRIES": "3"
@@ -124,6 +128,7 @@ services:
       K2HB_USE_AWS_SECRETS: "false"
       K2HB_VALIDATOR_SCHEMA: "equality_message.schema.json"
       K2HB_KAFKA_TOPIC_REGEX: (data[.][-\w]+)
+      K2HB_KAFKA_TOPIC_EXCLUSION_REGEX: "NOT_SET"
       K2HB_QUALIFIED_TABLE_PATTERN: ([-\w]+)\.([-\w]+)
       K2HB_AWS_S3_WRITE_MANIFESTS: "false"
 
