--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -224,4 +224,6 @@ services:
       K2HB_RETRY_INITIAL_BACKOFF: "1"
       K2HB_RETRY_MAX_ATTEMPTS: "3"
       K2HB_USE_AWS_SECRETS: "false"
+      K2HB_KAFKA_FETCH_MIN_BYTES: 5000
+      K2HB_KAFKA_MAX_WAIT_MS: 30000
       USER_NAME: "user"
